@@ -1,3 +1,11 @@
+2011-04-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* libtiff/tif_ojpeg.c: Fixes to compile with MinGW32 GCC.
+
+	* tools/fax2ps.c (main): Use tmpfile() rather than mkstemp() since
+	it is much more portable.  Tmpfile is included in ISO/IEC
+	9899:1990 and the WIN32 CRT.
+
 2011-03-26  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* tools/tiffset.c: add -d and -sd switches to allow operation on
